--- a/content/import.qmd
+++ b/content/import.qmd
@@ -24,21 +24,21 @@ In the NASIS Basic Microsoft Teams folder along with this exercise, locate and d
 
 In NASIS, Click the NASIS menu and select “Import GPS Site Data”:
 
-![](6-import.png)
+![](6-import.png "NASIS Client NASIS menu with the Import GPS Site Data menu option highlighted"){fig-alt="NASIS Client NASIS menu with the Import GPS Site Data menu option highlighted"}
 
 Next browse to the file you downloaded from Teams and click open. Files downloaded from Teams are typically stored in your downloads folder on your computer
 
-![](6-file-import.png)
+![](6-file-import.png "NASIS Client Select GPX File(s) to import window with data-import.gpx highlighted"){fig-alt="NASIS Client Select GPX File(s) to import window with data-import.gpx highlighted"}
 
 The next window shows a preview of the data which will be uploaded:
 
-![](6-import-preview.png)
+![](6-import-preview.png "NASIS Client GPS Import Preview window with User Site ID S2012IA027001 highlighted"){fig-alt="NASIS Client GPS Import Preview window with User Site ID S2012IA027001 highlighted"}
 
 Here you can check for completeness and correctness of the data, and you have the ability to alter the actions column, to either add the row of data or skip it. For User Site ID “S2012IA009001”, change the action to “skip” Notice you can also sort and filter the data to assist in reviewing. Click the OK button to continue.
 
 Notice the status messages window has provided information on the import process confirming it has completed:
 
-![](6-import-status.png)
+![](6-import-status.png "NASIS Client Status Messages window containing a list of sites added during the GPS data import"){fig-alt="NASIS Client Status Messages window containing a list of sites added during the GPS data import"}
 
 Open the “Site” table to view the newly added data.
 
