--- a/content/pre-course.qmd
+++ b/content/pre-course.qmd
@@ -11,7 +11,6 @@ format:
     toc: true
     toc-location: left
     toc-depth: 3
-editor: visual
 date: today
 title-block-banner: "#19567B"
 ---
@@ -22,17 +21,17 @@ title-block-banner: "#19567B"
 
 Locate the NASIS Editor Client Software and execute it by browsing to the shortcut in the windows start menu. You will find it within the folder "USDA Applications":
 
-![](start-screen.png)
+![](start-screen.png "NASISEditor icon and text shortcut highlighted in the Windows Start menu program list"){fig-alt="NASISEditor icon and text shortcut highlighted in the Windows Start menu program list"}
 
 ### Alternate Method
 
 If the program is not present in the start menu, try to browse to the directory the program is stored in using Windows Explorer, typically the NASIS Editor client is located in "C:\\Program Files (x86)\\USDA\\NASIS 7.1 Client" the program file name you will need to open is "NASISEditor.exe".
 
-![](explorer-screen.png)
+![](explorer-screen.png "NASISEditor.exe icon and text application highlighted in the Windows Explorer Window"){fig-alt="NASISEditor.exe icon and text application highlighted in the Windows Explorer Window"}
 
 ### Request Support if Needed
 
-If you are still unable to locate the NASIS Editor Client Software, it is possible it has not yet been installed on your computer. You should request installation assistance from an Information Technology Specialist via the OCIO Help Icon shortcut on the desktop or via the OCIO Help Icon on the windows taskbar. If you are not a USDA employee, you can find additional information on NASIS installation [here](https://new.cloudvault.usda.gov/index.php/s/xFTJabHiT45WDom).
+If you are still unable to locate the NASIS Editor Client Software, it is possible it has not yet been installed on your computer. You should request installation assistance from an Information Technology Specialist via the OCIO Help Icon shortcut on the desktop or via the OCIO Help Icon on the windows taskbar. If you are not a USDA employee, you can find additional information on NASIS installation [https://new.cloudvault.usda.gov/index.php/s/xFTJabHiT45WDom](https://new.cloudvault.usda.gov/index.php/s/xFTJabHiT45WDom).
 
 ## Login to NASIS and Initialize
 
@@ -42,15 +41,15 @@ The NASIS Editor requires a network or internet connection the first time it run
 
 ### Login Window
 
-When you have successfully launched the NASIS Editor you will see a window appear which will either attempt to sign you in to the software automatically using desktop single sign-on, or you may need to select your sign-in method and enter the appropriate credentials. This could be using your LincPass card and PIN, or your eAuth username and password if you do not have a LincPass. If you do not have an account you can find additional instructions for requesting a NASIS account at the following site: [https://www.nrcs.usda.gov/resources/education-and-teaching-materials/nasis-frequently-asked-questions](https://www.nrcs.usda.gov/resources/education-and-teaching-materials/nasis-frequently-asked-questions). There is an alert in the login window indicating "You are using a browser that is no longer supported by USDA eAuthentication". SPSD staff is aware of the alert, and there is no difference in functionality of the application at this time. The issue will be corrected in a future release of the NASIS client.
+When you have successfully launched the NASIS Editor you will see a window appear which will either attempt to sign you in to the software automatically using desktop single sign-on, or you may need to select your sign-in method and enter the appropriate credentials. This could be using your LincPass card and PIN, or your eAuth username and password if you do not have a LincPass. If you do not have an account you can find additional instructions for requesting a NASIS account at the following site: <https://www.nrcs.usda.gov/resources/education-and-teaching-materials/nasis-frequently-asked-questions>. There is an alert in the login window indicating "You are using a browser that is no longer supported by USDA eAuthentication". SPSD staff is aware of the alert, and there is no difference in functionality of the application at this time. The issue will be corrected in a future release of the NASIS client.
 
-![](sign-in-screen.png)
+![](sign-in-screen.png "NASIS Client eAuth Login window prompt"){fig-alt="NASIS Client eAuth Login window prompt"}
 
 ### Initialize the local database
 
 When the login completes successfully, you will see a message that you must first initialize the local database before you can start using the software. This will take some time to complete, be patient! You can continue to use your computer while this finishes and you can observe the progress by viewing the progress window. When the process completes, the editor will open and will be ready to use. The editor window will appear as below.
 
-![](nasis-screen.png)
+![](nasis-screen.png "NASIS Client editor window"){fig-alt="NASIS Client editor window"}
 
 ## View the About NASIS Help Screen
 
@@ -58,17 +57,17 @@ When the login completes successfully, you will see a message that you must firs
 
 The help menu can be accessed by clicking the "Help" text on the upper left part of editor which also contains other text for menus such as "NASIS", "Queries Explorer", and "Editor".
 
-![](menu-screen.png)
+![](menu-screen.png "NASIS Client menu bar with the help menu highlighted"){fig-alt="NASIS Client menu bar with the help menu highlighted"}
 
 ### Open the About NASIS Window
 
 The help menu opens to reveal a list of options to select. Choose the "About..." option by clicking it.
 
-![](help-screen.png)
+![](help-screen.png "NASIS Client help menu with About... option highlighted"){fig-alt="NASIS Client help menu with About... option highlighted"}
 
 The About NASIS window shows the NASIS Client Installed Version Number, Metadata Data Model Version, and Database File Size. This information can be shared with support staff to assist in troubleshooting issues with the NASIS Editor if needed. Take a screenshot of this information to send to your mentor.
 
-![](about-screen.png)
+![](about-screen.png "NASIS Client About NASIS window"){fig-alt="NASIS Client About NASIS window"}
 
 ## Confirm User Information
 
@@ -76,25 +75,25 @@ The About NASIS window shows the NASIS Client Installed Version Number, Metadata
 
 The NASIS menu can be accessed by clicking the "NASIS" text on the upper left part of editor which also contains other text for menus such as "Queries Explorer", "Editor", and "Help".
 
-![](nasis-menu-screen.png)
+![](nasis-menu-screen.png "NASIS Client menu bar with the NASIS menu highlighted"){fig-alt="NASIS Client menu bar with the NASIS menu highlighted"}
 
 ### Open the Manage User Profile Window
 
 The NASIS menu opens to reveal a list of options to select. Choose the "Manage User Profile..." option by clicking it.
 
-![](nasis-menu-user-screen.png)
+![](nasis-menu-user-screen.png "NASIS Client NASIS menu with the Manage User Profile... option highlighted"){fig-alt="NASIS Client NASIS menu with the Manage User Profile... option highlighted"}
 
 ### Review Information
 
 The Manage User Profile window shows information stored in the NASIS database about you as a user. It displays your windows login, name, description, phone, email address, default NASIS site, default NASIS group, and the date the object was last updated. Review the information and make any changes if necessary.
 
-![](user-screen.png)
+![](user-screen.png "NASIS Client Manage User Profile window"){fig-alt="NASIS Client Manage User Profile window"}
 
 ### Set a Default NASIS Group
 
 If the Default NASIS group has not been set, you will need to choose a default NASIS group. This step is required before you can make edits or add new data to NASIS. Click the down arrow at the right of the default NASIS group attribute listed in the window to open a selection menu which will list all the groups of which you are currently a member. It is recommended to choose a point or pedon based group unique to your region and MLRA office, such as "NC-WAV Waverly, IA Projects". The group you choose will be automatically populated as a data column for any new data you create. Consult with other local or regional staff familiar with NASIS or your mentor if you are unsure which group to select.
 
-![](default-group.png)
+![](default-group.png "NASIS Client Default NASIS Group choice list"){fig-alt="NASIS Client Default NASIS Group choice list"}
 
 When you have finished choosing your default group, capture a screenshot of the Manage User Profile window to send to you mentor. You must also click the save button before closing the Manage User Profile window to keep any of the changes you have made.
 
@@ -102,7 +101,7 @@ When you have finished choosing your default group, capture a screenshot of the 
 
 The final step to commit the changes you have made to your user profile is to upload all changes to the national database. Do this by selecting the "Upload All Changes to National Database" menu option.
 
-![](upload-screen.png)
+![](upload-screen.png "NASIS Client NASIS menu with the Upload All Changes to National Database option highlighted"){fig-alt="NASIS Client NASIS menu with the Upload All Changes to National Database option highlighted"}
 
 When the upload is complete, you can exit the NASIS client by selecting "Exit" from the NASIS menu or by clicking the "X" close window icon in the upper right of the NASIS client window.
 
@@ -114,5 +113,4 @@ Send the screenshots you captured previously of the About NASIS window, and the 
 
 ## Additional Resources
 
-[https://www.nrcs.usda.gov/resources/education-and-teaching-materials/national-soil-information-system-nasis](https://www.nrcs.usda.gov/resources/education-and-teaching-materials/national-soil-information-system-nasis)
-
+<https://www.nrcs.usda.gov/resources/education-and-teaching-materials/national-soil-information-system-nasis>
