adding ES exercise to index

--- a/content/index.qmd
+++ b/content/index.qmd
@@ -24,4 +24,4 @@ title-block-banner: "#19567B"
 ##### 9. [Minimum Data Standards](https://ncss-tech.github.io/nasis_training/content/mindata.html)
 ##### 10. [Project Management](https://ncss-tech.github.io/nasis_training/content/project.html)
 ##### 11. [Technical Soil Services Management](https://ncss-tech.github.io/nasis_training/content/tss.html)
-##### 12. Ecological and Vegetation Data
+##### 12. [Ecological and Vegetation Data](https://ncss-tech.github.io/nasis_training/content/veg.html)
