--- a/content/query-load.qmd
+++ b/content/query-load.qmd
@@ -34,11 +34,11 @@ How many legends were found using your query? How many sites? Where can you find
 
 ### Accept the Data into your Local Database
 
-If you have a significant amount of data in your local database already, you might want to clear your local database for this course. To do this select the “Clear Local Database” button. If you do, you will need to run the previous query again. On the legend tab select the rows with the Rec ID = 129780 and 14033. Notice you can use sorting and the auto filter row in this view but not the filter editor.
+If you have a significant amount of data in your local database already, you might want to clear your local database for this course. To do this select the “Clear Local Database” button. If you do, you will need to run the previous query again. On the legend tab select the rows with the Rec ID = 129780, 14033 and 133576. Notice you can use sorting and the auto filter row in this view but not the filter editor.
 
 After selecting the rows click the “Exclude” button. What do you see different in the “Location” column?
 
-Use the Exclude or Include buttons to further refine the results of your query and customize the data that will go into your local database. Now click the “Accept” button. This downloads the national data into your local database.
+You can use the Exclude or Include buttons to further refine the results of future queries to customize the data that will go into your local database. For now, continue to exclude the records mentioned above and click the “Accept” button. This action downloads the national data into your local database.
 
 ### Query Against the Local Database
 
